Applied styling to scrollbars / Fixed styling

--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,14 @@ code {
   align-items: center;
   z-index: 5;
   color: #fff;
-  outline: 3px solid #161d1d;
+  /* outline: 3px solid #161d1d; */
+}
+
+.savedLocsCntr::-webkit-scrollbar, .wthrInfoCntr::-webkit-scrollbar { width: 10px; }
+
+.savedLocsCntr::-webkit-scrollbar-thumb {
+  background: #1e2428;
+  border-radius: 20px;
 }
 
 .returnMainViewBtn {
@@ -141,13 +148,14 @@ code {
   cursor: pointer;
 }
 
-.returnMainViewBtn:hover, .setLocMain:hover, .removeLocBtn:hover {
+.returnMainViewBtn:hover, .setLocMain:hover, .removeLocBtn:hover, .saveWhtrLocBtn:hover, .searchBtn:hover, .openWeatherBtn:hover  {
   color:#161d1d;
   background: #fff;
   transition: .1s linear;
 }
 
-.returnMainViewBtn:active, .setLocMain:active, .removeLocBtn:active {
+.returnMainViewBtn:active, .setLocMain:active, .removeLocBtn:active, .saveWhtrLocBtn:active, .searchBtn:active, .openWeatherBtn:active {
+  outline: none;
   color:#fff;
   background: #161d1d;
   transition: none;
@@ -262,6 +270,7 @@ code {
   top: 7rem;
   min-height: 20rem;
   width: 100%;
+  padding-bottom: 10rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -357,7 +366,13 @@ code {
   flex-direction: column;
   align-items: center;
   background: rgba(22, 29, 29, .15);
+  /* outline: 5px solid rgba(22, 29, 29, 1); */
   backdrop-filter: blur(10px);
+}
+
+.wthrInfoCntr::-webkit-scrollbar-thumb {
+  background: rgba(22, 29, 29, .3);
+  border-radius: 20px;
 }
 
 .currentWeatherCntr .returnMainViewBtn {
@@ -371,15 +386,13 @@ code {
   position: relative;
   bottom: 4rem;
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 800;
   letter-spacing: 1px;
   outline: 2px solid #fff;
   border-radius: 2px;
   padding: 5px 20px;
   cursor: pointer;
 }
-
-.saveWhtrLocBtn:hover { color: red; }
 
 .currentWeatherCntr .wthrHrlCntr {
   top: 8rem;
@@ -399,6 +412,7 @@ code {
 .ftrFrcstCntr {
   position: relative;
   top: 7.5rem;
+  padding-bottom: 10rem;
   width: 100%;
   /* outline: 1px solid red; */
 }
@@ -408,6 +422,7 @@ code {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  padding: 5px 0px;
   /* outline: 1px solid #fff; */
   /* box-shadow: 0px 3px 0px #fff; */
   border-bottom: 2px solid #fff;
@@ -431,7 +446,7 @@ code {
   position: fixed;
   height: 100%;
   width: 100%;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   /* z-index: 9; */
   overflow: hidden;
 }
@@ -768,7 +783,8 @@ code {
   .map-headerCntr {
     position: relative;
     width: 100%;
-    outline: 1px solid red;
+    /* z-index: 8; */
+    /* outline: 1px solid red; */
     /* background: red; */
   }
 
@@ -847,6 +863,7 @@ code {
   }
 
   .currentWeatherCntr .returnMainViewBtn {
+    left: 2rem;
     z-index: 5;
   }
 
